--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -29,7 +29,10 @@ body {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  margin-bottom: 3.5rem;
+  margin-bottom: 1.5rem;
+}
+.profile_section span {
+  display: none;
 }
 .profile_section #profile__img {
   width: 88px;
@@ -43,7 +46,7 @@ body {
   flex-direction: column;
   gap: 1.5rem;
 }
-.link_section a {
+.link_section > a {
   display: block;
   width: 80vw;
   background-color: #eaecf0;
@@ -67,15 +70,23 @@ body {
 }
 
 footer {
-  padding: 1rem 0;
-  margin-top: 4rem;
+  padding: 2rem 0;
 }
 
 .zuri_footer {
   display: flex;
   width: 85vw;
+  padding: 2rem 0;
   align-items: center;
   justify-content: space-between;
+  border-top: 1px solid gray;
+}
+.zuri_footer p {
+  font-weight: bold;
+}
+.zuri_footer p b {
+  font-size: 2rem;
+  color: red;
 }
 
 @media screen and (max-width: 700px) {
@@ -90,8 +101,10 @@ footer {
     width: 90vw;
   }
   .zuri_footer {
-    width: 90vw;
+    width: 80vw;
+    border: 0;
     flex-direction: column;
     gap: 1rem;
+    align-items: flex-start;
   }
 }/*# sourceMappingURL=app.css.map */
