--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -15,8 +15,8 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  
-  hr{
+
+  hr {
     display: hidden;
   }
 }
@@ -27,7 +27,10 @@ body {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  margin-bottom: 3.5rem;
+  margin-bottom: 1.5rem;
+  span {
+    display: none;
+  }
   #profile__img {
     width: 88px;
     height: 88px;
@@ -39,7 +42,7 @@ body {
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
-  a {
+  & > a {
     display: block;
     width: 80vw;
     background-color: #eaecf0;
@@ -59,37 +62,47 @@ body {
 
     img {
       display: block;
-   
+
       width: 25px;
       height: 25px;
     }
   }
 }
-footer{
-    padding: 1rem 0;
-    margin-top: 4rem;
+footer {
+  padding: 2rem 0;
 }
 .zuri_footer {
-    display: flex;
-    width: 85vw;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  width: 85vw;
+  padding: 2rem 0;
+  align-items: center;
+  justify-content: space-between;
+  border-top: 1px solid gray;
+  p {
+    font-weight: bold;
+    b {
+      font-size: 2rem;
+      color: red;
+    }
   }
+}
 
-@media screen and (max-width:700px) {
-    .App{
-        padding: 4rem 0;
-        hr{
-            display: block;
-            width: 90%;
-        }
+@media screen and (max-width: 700px) {
+  .App {
+    padding: 4rem 0;
+    hr {
+      display: block;
+      width: 90%;
     }
-    .profile_section{
-        width: 90vw;
-    }
-    .zuri_footer{
-        width:90vw;
-        flex-direction: column;
-        gap:1rem;
-    }
+  }
+  .profile_section {
+    width: 90vw;
+  }
+  .zuri_footer {
+    width: 80vw;
+    border: 0;
+    flex-direction: column;
+    gap: 1rem;
+    align-items: flex-start;
+  }
 }
