--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -76,6 +76,7 @@ footer {
 .zuri_footer {
   display: flex;
   width: 85vw;
+  font-size: 1.2rem;
   padding: 2rem 0;
   align-items: center;
   justify-content: space-between;
