--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -89,7 +89,7 @@ footer {
 
 @media screen and (max-width: 700px) {
   .App {
-    padding: 4rem 0;
+    padding: 2rem 0 0 0;
   }
   .App hr {
     display: block;
@@ -101,8 +101,8 @@ footer {
   .zuri_footer {
     width: 80vw;
     border: 0;
+    padding: 0;
     flex-direction: column;
-    gap: 1rem;
-    align-items: flex-start;
+    gap: 1.5rem;
   }
 }/*# sourceMappingURL=app.css.map */
