--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -11,14 +11,14 @@ body {
   justify-content: center;
 }
 
-.App {
+.Home {
   padding: 2rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
-.App hr {
+.Home hr {
   display: hidden;
 }
 
@@ -88,10 +88,10 @@ footer {
 }
 
 @media screen and (max-width: 700px) {
-  .App {
-    padding: 4rem 0;
+  .Home {
+    padding: 2rem 0 0 0;
   }
-  .App hr {
+  .Home hr {
     display: block;
     width: 90%;
   }
@@ -101,8 +101,9 @@ footer {
   .zuri_footer {
     width: 80vw;
     border: 0;
+    padding: 1rem 0;
     flex-direction: column;
     gap: 1rem;
     align-items: flex-start;
   }
-}/*# sourceMappingURL=app.css.map */
+} /*# sourceMappingURL=app.css.map */
