--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -9,7 +9,7 @@ body {
   align-items: center;
   justify-content: center;
 }
-.App {
+.Home {
   padding: 2rem;
   display: flex;
   flex-direction: column;
@@ -90,8 +90,8 @@ footer {
 }
 
 @media screen and (max-width: 700px) {
-  .App {
-    padding: 4rem 0;
+  .Home {
+    padding: 2rem 0 0 0;
     hr {
       display: block;
       width: 90%;
@@ -103,6 +103,7 @@ footer {
   .zuri_footer {
     width: 80vw;
     border: 0;
+    padding:1rem 0;
     flex-direction: column;
     gap: 1rem;
     align-items: flex-start;
