--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -44,7 +44,7 @@ margin-top: 20px;
     border-radius: 8px;
     &::placeholder{
         font-size: 16px;
-      line-height: 24px;
+    //   line-height: 24px;
 
       color: #667085;
     }
