--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -1,19 +1,18 @@
-@import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@700&family=Inter&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@700&family=Inter&display=swap");
 .Contact {
-
   width: 720px;
-  font-family: 'Inter',sans-serif;
-   
+  font-family: "Inter", sans-serif;
 }
 .contact-header {
   p {
-margin-top: 20px;
+    margin-top: 20px;
     font-size: 1.25rem;
     line-height: 30px;
     color: #475467;
   }
 }
 .form-container {
+width: 720px;
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
@@ -21,7 +20,6 @@ margin-top: 20px;
   input {
     padding: 10px 14px;
     outline: none;
-
     border: 1px solid #d0d5dd;
     box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
     border-radius: 8px;
@@ -42,16 +40,13 @@ margin-top: 20px;
     border: 1px solid #d0d5dd;
     box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
     border-radius: 8px;
-    &::placeholder{
-        font-size: 16px;
-    //   line-height: 24px;
-
+    &::placeholder {
+      font-size: 16px;
       color: #667085;
     }
-
   }
   button {
-    width: 720px;
+    width: 100%;
     height: 48px;
     margin-top: 8px;
     background: #1570ef;
@@ -65,27 +60,48 @@ label {
   font-size: 14px;
   flex-direction: column;
   gap: 6px;
-  #first__name,
-  #last__name {
+  #first_name,
+  #last_name {
     width: 348px;
   }
   #email,
   #message {
     width: 100%;
   }
-  #terms{
+  #terms {
     width: 20px;
     height: 20px;
   }
 }
-.terms{
-    display: flex;
-    flex-direction: row;
-    gap: 0.75rem;
-    
+.terms {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 0.75rem;
 }
 
-.contact__name{
-    display: flex;
-    justify-content: space-between;
+.contact__name {
+  display: flex;
+  justify-content: space-between;
+}
+@media screen and (max-width: 750px) {
+  .Contact {
+    width: 90vw; 
+    min-height: 100vh;
+    padding-top: 3rem;
+  }
+  .form-container{
+    width: 100%;
+  }
+  .contact__name{
+    flex-direction: column;
+    gap: 1.5rem;
+   
+  }
+  label{
+    #first_name,#last_name{
+        width:90vw;
+    }
+  }
+
 }
