--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -106,4 +106,4 @@ footer {
     gap: 1rem;
     align-items: flex-start;
   }
-} /*# sourceMappingURL=app.css.map */
+}/*# sourceMappingURL=home.css.map */
