--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -62,7 +62,7 @@
   font-size: 16px;
   color: #667085;
 }
-.form-container button {
+.form-container #btn__submit {
   width: 100%;
   height: 48px;
   margin-top: 8px;
@@ -91,16 +91,16 @@ label #terms {
   height: 20px;
 }
 
+.contact__name {
+  display: flex;
+  justify-content: space-between;
+}
+
 .terms {
   display: flex;
   flex-direction: row;
   align-items: center;
   gap: 0.75rem;
-}
-
-.contact__name {
-  display: flex;
-  justify-content: space-between;
 }
 
 @media screen and (max-width: 750px) {
@@ -116,7 +116,8 @@ label #terms {
     flex-direction: column;
     gap: 1.5rem;
   }
-  label #first_name, label #last_name {
+  label #first_name,
+label #last_name {
     width: 90vw;
   }
 }/*# sourceMappingURL=contact.css.map */
