--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -4,14 +4,8 @@
   margin: 0;
 }
 
-body {
-  min-height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
 .Home {
+  min-height: 100vh;
   padding: 2rem;
   display: flex;
   flex-direction: column;
@@ -95,7 +89,7 @@ footer {
     display: block;
     width: 90%;
   }
-  .profile_section {
+  .link_section > a {
     width: 90vw;
   }
   .zuri_footer {
