--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -68,6 +68,7 @@
   width: 100%;
   height: 48px;
   margin-top: 8px;
+  color: white;
   background: #1570ef;
   border: 1px solid #1570ef;
   box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
