--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -3,7 +3,7 @@
   width: 720px;
   min-height: 100vh;
   margin: 0 auto;
- 
+
   font-family: "Inter", sans-serif;
 }
 .contact-header {
@@ -53,6 +53,7 @@
     width: 100%;
     height: 48px;
     margin-top: 8px;
+    color: white;
     background: #1570ef;
     border: 1px solid #1570ef;
     box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
