--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -1,8 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@700&family=Inter&display=swap");
 .Contact {
   width: 720px;
-  min-height: 100vh;
+  min-height: 80vh;
   margin: 0 auto;
+  padding: 2rem 0;
+  -webkit-backdrop-filter: blur(14rem);
+          backdrop-filter: blur(14rem);
   font-family: "Inter", sans-serif;
 }
 
@@ -73,6 +76,10 @@
   border: 1px solid #1570ef;
   box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
   border-radius: 8px;
+  transition: all 0.1s linear;
+}
+.form-container #btn__submit:hover {
+  transform: scale(0.95);
 }
 
 label {
@@ -92,6 +99,8 @@ label #message {
 label #terms {
   width: 20px;
   height: 20px;
+  border: 1px solid #d0d5dd;
+  border-radius: 6px;
 }
 
 .contact__name {
