--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -30,6 +30,9 @@
   box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
   border-radius: 8px;
 }
+.form-container input:focus {
+  border: 1px solid #475467;
+}
 .form-container input::-moz-placeholder {
   font-size: 16px;
   line-height: 24px;
