--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -4,7 +4,7 @@
   min-height: 80vh;
   margin: 0 auto;
   padding: 2rem 0;
-  
+
   backdrop-filter: blur(14rem);
   font-family: "Inter", sans-serif;
 }
@@ -28,7 +28,9 @@
     border: 1px solid #d0d5dd;
     box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
     border-radius: 8px;
-
+    &:focus {
+      border: 1px solid #475467;
+    }
     &::placeholder {
       font-size: 16px;
       line-height: 24px;
@@ -61,8 +63,8 @@
     box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
     border-radius: 8px;
     transition: all 0.1s linear;
-    &:hover{
-      transform: scale(.95);
+    &:hover {
+      transform: scale(0.95);
     }
   }
 }
