--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -49,6 +49,12 @@
   text-decoration: none;
   padding: 1.5rem 0;
   border-radius: 8px;
+  transition: all 0.2s linear;
+}
+.link_section > a:hover {
+  background-color: rgba(179, 183, 190, 0.8823529412);
+  transform: scale(1.005);
+  color: rgb(81, 81, 216);
 }
 .link_section .social_media {
   display: flex;
