--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -47,6 +47,12 @@
     text-decoration: none;
     padding: 1.5rem 0;
     border-radius: 8px;
+    transition: all 0.2s linear;
+    &:hover{
+      background-color: #b3b7bee1;
+      transform: scale(1.005);
+      color: rgb(81, 81, 216);
+    }
   }
 
   .social_media {
